--- a/src/Services/Basket/Basket.API/appsettings.json
+++ b/src/Services/Basket/Basket.API/appsettings.json
@@ -3,6 +3,9 @@
     "BasketConnection": "Server=localhost;Port=5433;Database=BasketDb; User Id=postgres;Password=123456;Include Error Detail=true",
     "Redis": "redis-16617.c52.us-east-1-4.ec2.redns.redis-cloud.com:16617,user=default,password=rWXTbBxvnvs6nD3KEZ9l4F8P4KpcJclS"
   },
+  "GrpcSettings": {
+    "DiscountUrl":  "https://localhost:5052"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
